# IDLark

./: LEGAL.md  README.md  pyproject.toml
idlark/: __init__.py  grammar.lark  idl_definitions.py  idl_types.py  idlark.py
