[tool.poetry]
name = "idlark"
version = "1.0.0"
description = "A library for parsing WebIDL"
authors = ["xxxxx", "xxxxx"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.9"
lark = "^1.1.9"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
